fix scrollbar

--- a/src/containers/Home/home.module.css
+++ b/src/containers/Home/home.module.css
@@ -28,6 +28,10 @@ strong {
 Main Layout 
 =============*/
 
+.section {
+  overflow-y: hidden;
+}
+
 .grid-container {
   display: grid;
   justify-content: center;
